[gd_scene load_steps=6 format=3 uid="uid://bb2newu1j6shf"]

[ext_resource type="Script" uid="uid://c8wobq520qxn6" path="res://Scenes/Game/Game.gd" id="1_ln2h6"]
[ext_resource type="Texture2D" uid="uid://crked71mvyrfj" path="res://assets/background/sheet.png" id="1_rdw05"]
[ext_resource type="PackedScene" uid="uid://gtmxf5okgg64" path="res://Scenes/Clippy/Clippy.tscn" id="2_gwu2e"]
[ext_resource type="PackedScene" uid="uid://cx4nse1745n2n" path="res://Scenes/Barrier/Barrier.tscn" id="3_xbxml"]
[ext_resource type="PackedScene" uid="uid://c5yy8r5okk7dg" path="res://Scenes/GameUI/GameUi.tscn" id="5_y3kpf"]

[node name="Game" type="Node2D"]
script = ExtResource("1_ln2h6")

[node name="Sheet" type="Sprite2D" parent="."]
visible = false
position = Vector2(369.21, 426.49)
scale = Vector2(0.384, 0.34)
texture = ExtResource("1_rdw05")

[node name="Clippy" parent="." instance=ExtResource("2_gwu2e")]
position = Vector2(87, 438)

[node name="Barrier" parent="." instance=ExtResource("3_xbxml")]

[node name="PipesHolder" type="Node" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="UpperPoint" type="Marker2D" parent="."]
position = Vector2(497, 259)

[node name="LowerPoint" type="Marker2D" parent="."]
position = Vector2(497, 594)

[node name="Control" type="Control" parent="."]
z_index = -1
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 1923.0
offset_bottom = 2510.0
scale = Vector2(0.252, 0.34)
texture = ExtResource("1_rdw05")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameUI" parent="CanvasLayer" instance=ExtResource("5_y3kpf")]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
